--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Mi tercer Proyecto</title>
 </head>
 <body>
-    <h1>Bienvenido a mi segundo proyecto</h1>
+    <h1>Bienvenido a mi portafolio de servicios como jugador de futbol</h1>
     <p>Este es un párrafo de ejemplo en español.</p>
 </body>
 </html>
