--- a/index.html
+++ b/index.html
@@ -1,12 +1,303 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi tercer Proyecto</title>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>José Luis Lozano — Soccer Portfolio</title>
+<meta name="description" content="Portfolio deportivo y contactos para reclutamiento - José Luis Lozano (midfielder)" />
+<style>
+  :root{
+    --bg:#0f1724; --card:#0b1220; --accent:#ff6b35; --muted:#9aa7b2; --glass: rgba(255,255,255,0.03);
+    --maxw:1100px;
+    font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
+  }
+  *{box-sizing:border-box}
+  body{margin:0;background:linear-gradient(180deg,#071029 0%, #081526 60%); color:#e6eef3; -webkit-font-smoothing:antialiased;}
+  .container{max-width:var(--maxw);margin:28px auto;padding:20px;}
+  header{display:flex;gap:16px;align-items:center;margin-bottom:20px}
+  .logo{width:76px;height:76px;border-radius:12px;background:linear-gradient(135deg,var(--accent),#ff9a5a);display:flex;align-items:center;justify-content:center;font-weight:700;color:#071026}
+  h1{font-size:1.6rem;margin:0}
+  p.lead{margin:4px 0 0;color:var(--muted)}
+  .grid{display:grid;grid-template-columns:1fr 360px;gap:20px;margin-top:20px}
+  @media (max-width:960px){.grid{grid-template-columns:1fr}}
+  .card{background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));border-radius:12px;padding:16px;box-shadow:0 6px 20px rgba(2,6,23,0.6);border:1px solid rgba(255,255,255,0.03)}
+  .hero{display:flex;gap:16px;align-items:center}
+  .profile{flex:1}
+  .badges{display:flex;gap:8px;flex-wrap:wrap;margin-top:12px}
+  .badge{background:var(--glass);padding:6px 10px;border-radius:999px;color:var(--muted);font-size:0.85rem}
+  .video-thumb{background:#061423;border-radius:8px;padding:12px;display:flex;flex-direction:column;gap:8px;align-items:center;justify-content:center;border:1px dashed rgba(255,255,255,0.04)}
+  button.primary{background:var(--accent);border:none;padding:10px 12px;border-radius:10px;color:#071026;font-weight:700;cursor:pointer}
+  button.ghost{background:transparent;border:1px solid rgba(255,255,255,0.06);padding:8px 10px;border-radius:8px;color:var(--muted);cursor:pointer}
+  .meta{display:flex;gap:8px;flex-wrap:wrap;margin-top:12px}
+  .contacts a{color:var(--accent);text-decoration:none}
+  /* Search & table */
+  .actions{display:flex;gap:10px;align-items:center}
+  input[type="search"]{padding:10px;border-radius:8px;border:1px solid rgba(255,255,255,0.04);background:transparent;color:inherit;width:100%}
+  table{width:100%;border-collapse:collapse;margin-top:12px;font-size:0.95rem}
+  th,td{padding:10px;border-bottom:1px solid rgba(255,255,255,0.03);text-align:left}
+  th{color:var(--muted);font-weight:600;font-size:0.85rem}
+  .small{font-size:0.85rem;color:var(--muted)}
+  .copy-btn{background:transparent;border:1px solid rgba(255,255,255,0.04);padding:6px;border-radius:8px;color:var(--muted);cursor:pointer}
+  /* gallery */
+  .gallery{display:grid;grid-template-columns:repeat(3,1fr);gap:8px}
+  @media (max-width:640px){.gallery{grid-template-columns:repeat(2,1fr)}}
+  .img{height:110px;background:#071726;border-radius:8px;display:flex;align-items:center;justify-content:center;color:var(--muted)}
+  footer{margin-top:24px;text-align:center;color:var(--muted);font-size:0.9rem}
+  /* modal video */
+  .modal{position:fixed;inset:0;background:rgba(2,6,23,0.8);display:none;align-items:center;justify-content:center;padding:20px;z-index:40}
+  .modal.open{display:flex}
+  .modal-content{width:100%;max-width:900px;background:#041222;padding:12px;border-radius:10px;position:relative}
+  .close{position:absolute;right:12px;top:12px;background:transparent;border:0;color:#fff;font-size:1.2rem;cursor:pointer}
+  /* form */
+  form .row{display:grid;grid-template-columns:1fr 1fr;gap:10px}
+  @media (max-width:640px){form .row{grid-template-columns:1fr}}
+  input,textarea{width:100%;padding:10px;border-radius:8px;border:1px solid rgba(255,255,255,0.04);background:transparent;color:inherit}
+  textarea{min-height:100px;resize:vertical}
+  .muted{color:var(--muted)}
+</style>
 </head>
 <body>
-    <h1>Bienvenido a mi portafolio de servicios como jugador de futbol</h1>
-    <p>Este es un párrafo de ejemplo en español.</p>
+  <div class="container">
+    <header>
+      <div class="logo">JL</div>
+      <div>
+        <h1>José Luis Lozano — Soccer Portfolio</h1>
+        <p class="lead">Midfielder • Vision & Playmaking — Bogota, Colombia</p>
+      </div>
+    </header>
+
+    <div class="grid">
+      <!-- Main column -->
+      <section>
+        <div class="card hero">
+          <div class="profile">
+            <h2 style="margin:0">About me</h2>
+            <p class="muted">Soy José Luis Lozano Cárdenas, mediocampista. Me especializo en la visión de juego, precisión en el pase y creación de jugadas. En esta web encontrarás mi video de highlights, mis datos de contacto y colleges donde me he postulado.</p>
+            <div class="badges">
+              <div class="badge">Position: Midfielder</div>
+              <div class="badge">Skills: Vision · Passing · Playmaking</div>
+              <div class="badge">Study: Basic Programming (HTML, Java, CSS)</div>
+            </div>
+
+            <div style="display:flex;gap:10px;margin-top:14px;flex-wrap:wrap">
+              <button class="primary" id="openVideo">Watch Highlights</button>
+              <a class="ghost" href="#contactForm" style="display:inline-block;padding:8px 10px;border-radius:8px;text-decoration:none">Contact</a>
+            </div>
+
+            <div class="meta">
+              <div class="small">Email: <a href="mailto:ljoseluso@gmail.com" class="contacts">ljoseluso@gmail.com</a></div>
+              <div class="small">Location: Bogotá, Colombia</div>
+            </div>
+          </div>
+
+          <div style="width:320px">
+            <div class="card video-thumb">
+              <strong class="small">Highlight Video</strong>
+              <div class="small muted">Click to open</div>
+              <img src="https://img.youtube.com/vi/cv-yO-dcY5s/maxresdefault.jpg" alt="video thumb" style="width:100%;border-radius:8px;margin-top:8px;cursor:pointer" id="thumb">
+              <div style="display:flex;gap:8px;margin-top:8px">
+                <button class="ghost" id="downloadBtn" onclick="window.open('https://youtu.be/cv-yO-dcY5s?si=6gYlmwzGqYRuS_hI','_blank')">Open YouTube</button>
+                <button class="ghost" id="copyVideo" onclick="copyText('https://youtu.be/cv-yO-dcY5s?si=6gYlmwzGqYRuS_hI')">Copy link</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Colleges / Contacts -->
+        <div class="card" style="margin-top:18px">
+          <div style="display:flex;justify-content:space-between;align-items:center">
+            <h3 style="margin:0">Colleges & High Schools contact list</h3>
+            <div style="width:320px">
+              <div class="actions" style="gap:8px">
+                <input type="search" id="search" placeholder="Buscar colegio / ciudad" aria-label="Buscar">
+              </div>
+            </div>
+          </div>
+
+          <table id="contactsTable" aria-live="polite">
+            <thead>
+              <tr><th>Institution</th><th>Location</th><th>Contact</th><th>Email</th><th></th></tr>
+            </thead>
+            <tbody>
+              <!-- Ejemplos: modifica según necesites -->
+              <tr>
+                <td>Palm Beach State College</td>
+                <td>Lake Worth, FL, USA</td>
+                <td>International Admissions</td>
+                <td id="mail1">international@pbsc.edu</td>
+                <td><button class="copy-btn" onclick="copyText('international@pbsc.edu')">Copy</button></td>
+              </tr>
+              <tr>
+                <td>University of Central Florida (UCF)</td>
+                <td>Orlando, FL, USA</td>
+                <td>Soccer Dept</td>
+                <td id="mail2">soccer@athletics.ucf.edu</td>
+                <td><button class="copy-btn" onclick="copyText('soccer@athletics.ucf.edu')">Copy</button></td>
+              </tr>
+              <tr>
+                <td>Florida Atlantic University (FAU)</td>
+                <td>Boca Raton, FL, USA</td>
+                <td>Coach Joey Worthen</td>
+                <td id="mail3">worthenj@fau.edu</td>
+                <td><button class="copy-btn" onclick="copyText('worthenj@fau.edu')">Copy</button></td>
+              </tr>
+              <tr>
+                <td>Monroe College</td>
+                <td>Bronx, NY, USA</td>
+                <td>Coach Marcus DiBernardo</td>
+                <td>mdibernardo@monroecollege.edu</td>
+                <td><button class="copy-btn" onclick="copyText('mdibernardo@monroecollege.edu')">Copy</button></td>
+              </tr>
+              <tr>
+                <td>Tyler Junior College</td>
+                <td>Tyler, TX, USA</td>
+                <td>Soccer Dept</td>
+                <td>ShaunStocker@tjc.edu</td>
+                <td><button class="copy-btn" onclick="copyText('ShaunStocker@tjc.edu')">Copy</button></td>
+              </tr>
+            </tbody>
+          </table>
+          <p class="small muted" style="margin-top:10px">Tip: si un email rebota, intenta con el correo general del athletics o admissions.</p>
+        </div>
+
+        
+
+        <!-- Contact form -->
+        <div id="contactForm" class="card" style="margin-top:18px">
+          <h3>Contact / Ready-to-send email</h3>
+          <form id="contactMe" onsubmit="handleContact(event)">
+            <div class="row">
+              <input type="text" id="name" placeholder="Your name (e.g. José Luis Lozano)" required>
+              <input type="email" id="email" placeholder="Your email" required>
+            </div>
+            <div style="margin-top:10px">
+              <input type="text" id="subject" placeholder="Subject (e.g. Soccer Recruitment Inquiry)" required>
+            </div>
+            <div style="margin-top:10px">
+              <textarea id="message" placeholder="Write your message... (will open in your email client)" required>Hi, I am José Luis Lozano Cárdenas from Bogotá, Colombia. I play as a midfielder (vision, passing, playmaking). Here is my highlight video: https://youtu.be/cv-yO-dcY5s?si=6gYlmwzGqYRuS_hI
+I would like info about recruitment and scholarship opportunities. Thanks!</textarea>
+            </div>
+            <div style="display:flex;gap:8px;margin-top:10px;align-items:center">
+              <button type="submit" class="primary">Open email client</button>
+              <button type="button" class="ghost" onclick="clearForm()">Clear</button>
+              <span class="small muted" style="margin-left:auto">This will open your mail app (mailto)</span>
+            </div>
+          </form>
+        </div>
+
+      </section>
+
+      <!-- Side column -->
+      <aside>
+        <div class="card">
+          <h3 style="margin:0 0 8px 0">Quick Info</h3>
+          <p class="muted small">Use these quick actions to speed up outreach.</p>
+          <div style="display:flex;gap:8px;flex-direction:column;margin-top:10px">
+            <button class="primary" onclick="openVideoModal()">Ver highlights</button>
+            <button class="ghost" onclick="copyText('https://youtu.be/cv-yO-dcY5s?si=6gYlmwzGqYRuS_hI')">Copy Video Link</button>
+            <a class="ghost" href="#contactsTable" style="text-align:center;padding:8px">Ver contactos</a>
+          </div>
+        </div>
+
+        <div class="card" style="margin-top:14px">
+          <h4 style="margin:0">Stats (ejemplo)</h4>
+          <p class="small muted" style="margin-top:8px">Matches played: <strong>18</strong><br/>Goals: <strong>6</strong> • Assists: <strong>9</strong></p>
+          <hr style="border:none;border-top:1px solid rgba(255,255,255,0.03);margin:12px 0">
+          <p class="small muted">Position: Midfielder</p>
+          <p class="small muted">Languages: Spanish (native), Basic English</p>
+        </div>
+
+        <div class="card" style="margin-top:14px">
+          <h4 style="margin:0">Downloads</h4>
+          <p class="small muted" style="margin-top:8px">CV deportivo / Sports CV (PDF)</p>
+          <div style="display:flex;gap:8px;margin-top:8px">
+            <button class="ghost" onclick="downloadCV()">Download PDF</button>
+          </div>
+        </div>
+
+      </aside>
+    </div>
+
+    <footer>
+      Created for recruitment — José Luis Lozano Cárdenas • Edit this page to personalize content
+    </footer>
+  </div>
+
+  <!-- Video modal -->
+  <div id="videoModal" class="modal" aria-hidden="true">
+    <div class="modal-content" role="dialog" aria-modal="true" aria-label="Video highlights">
+      <button class="close" onclick="closeVideo()">✕</button>
+      <!-- Responsive iframe -->
+      <div style="position:relative;padding-top:56.25%">
+        <iframe id="ytplayer" style="position:absolute;left:0;top:0;width:100%;height:100%;border:0;border-radius:8px"
+          src="https://www.youtube.com/embed/cv-yO-dcY5s?rel=0"
+          title="Highlights" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+    </div>
+  </div>
+
+<script>
+  // Open video modal
+  const modal = document.getElementById('videoModal');
+  document.getElementById('openVideo').addEventListener('click', openVideoModal);
+  document.getElementById('thumb').addEventListener('click', openVideoModal);
+
+  function openVideoModal(){
+    modal.classList.add('open');
+    modal.setAttribute('aria-hidden','false');
+  }
+  function closeVideo(){
+    modal.classList.remove('open');
+    const iframe = document.getElementById('ytplayer');
+    // stop video
+    iframe.src = iframe.src;
+    modal.setAttribute('aria-hidden','true');
+  }
+
+  // copy to clipboard helper
+  function copyText(text){
+    if(!text) return;
+    navigator.clipboard?.writeText(text).then(()=>{
+      alert('Copied to clipboard: ' + text);
+    }).catch(()=>{ prompt('Copy this link manually:', text); });
+  }
+
+  // Contact form - open mail client
+  function handleContact(e){
+    e.preventDefault();
+    const name = document.getElementById('name').value.trim();
+    const email = document.getElementById('email').value.trim();
+    const subject = encodeURIComponent(document.getElementById('subject').value.trim());
+    const message = encodeURIComponent(document.getElementById('message').value.trim());
+    const mailto = `mailto:?subject=${subject}&body=${message}%0D%0A%0D%0AFrom:%20${encodeURIComponent(name)}%20(${encodeURIComponent(email)})`;
+    window.location.href = mailto;
+  }
+  function clearForm(){
+    document.getElementById('contactMe').reset();
+  }
+
+  // Simple table search
+  document.getElementById('search').addEventListener('input', function(){
+    const q = this.value.toLowerCase();
+    const rows = document.querySelectorAll('#contactsTable tbody tr');
+    rows.forEach(r=>{
+      const txt = r.innerText.toLowerCase();
+      r.style.display = txt.indexOf(q) === -1 ? 'none' : '';
+    });
+  });
+
+  // fake download CV (you can attach a real file)
+  function downloadCV(){
+    const sample = [
+      '%PDF-1.4\n%âãÏÓ\n1 0 obj\n<< /Type /Catalog /Pages 2 0 R >>\nendobj\n'
+    ].join('');
+    const blob = new Blob([sample],{type:'application/pdf'});
+    const a = document.createElement('a');
+    a.href = URL.createObjectURL(blob);
+    a.download = 'JoseLuis_SportsCV.pdf';
+    a.click();
+    URL.revokeObjectURL(a.href);
+  }
+</script>
 </body>
 </html>
