--- a/index.html
+++ b/index.html
@@ -134,13 +134,18 @@
         </div>
 
         <div class="card" style="margin-top:14px">
-          <h4 style="margin:0"> estadisticas del jugador </h4>
+          <h4 style="margin:0"> estadisticas del jugador (actuales) </h4>
           <p class="small muted" style="margin-top:8px">Partidos jugados: <strong>58</strong><br/>Goles: <strong>12</strong> • Assists: <strong>15</strong></p>
           <hr style="border:none;border-top:1px solid rgba(255,255,255,0.03);margin:12px 0">
           <p class="small muted">Posicion: Mediocampista ofensivo</p>
           <p class="small muted">Idiomas que habla: Español (nativo), ingles intermedio</p>
         </div>
 
+        <div class="card" style="margin-top:14px">
+          <h4 style="margin:0"> Trayectoria del jugador </h4>
+          <p class="small muted" style="margin-top:8px">Club actual: Club Deportivo Equidad FC (2022 - presente)<br/>Club anterior: Academia de fútbol real Carvajal (2020 - 2022) <br/> independiente santa fe escuelas (2018-2019)</p>
+
+        </div>
         <div class="card" style="margin-top:14px">
           <h4 style="margin:0">Downloads</h4>
           <p class="small muted" style="margin-top:8px">CV deportivo / Sports CV (PDF)</p>
@@ -220,7 +225,7 @@
     });
   });
 
-  // fake download CV (you can attach a real file)
+  // download CV (you can attach a real file)
   function downloadCV(){
     const sample = [
       '%PDF-1.4\n%âãÏÓ\n1 0 obj\n<< /Type /Catalog /Pages 2 0 R >>\nendobj\n'
