--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
   }
   *{box-sizing:border-box}
-  body{margin:0;background:linear-gradient(180deg,#071029 0%, #081526 60%); color:#e6eef3; -webkit-font-smoothing:antialiased;}
+  body{margin:0;background:linear-gradient(180deg,#132a68 0%, #081526 60%); color:#e6eef3; -webkit-font-smoothing:antialiased;}
   .container{max-width:var(--maxw);margin:28px auto;padding:20px;}
   header{display:flex;gap:16px;align-items:center;margin-bottom:20px}
   .logo{width:76px;height:76px;border-radius:12px;background:linear-gradient(135deg,var(--accent),#ff9a5a);display:flex;align-items:center;justify-content:center;font-weight:700;color:#071026}
@@ -20,7 +20,7 @@
   p.lead{margin:4px 0 0;color:var(--muted)}
   .grid{display:grid;grid-template-columns:1fr 360px;gap:20px;margin-top:20px}
   @media (max-width:960px){.grid{grid-template-columns:1fr}}
-  .card{background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));border-radius:12px;padding:16px;box-shadow:0 6px 20px rgba(2,6,23,0.6);border:1px solid rgba(255,255,255,0.03)}
+  .card{background:linear-gradient(180deg, rgba(255, 255, 255, 0.205), rgba(255,255,255,0.01));border-radius:12px;padding:16px;box-shadow:0 6px 20px rgba(2,6,23,0.6);border:1px solid rgba(255,255,255,0.03)}
   .hero{display:flex;gap:16px;align-items:center}
   .profile{flex:1}
   .badges{display:flex;gap:8px;flex-wrap:wrap;margin-top:12px}
@@ -143,7 +143,7 @@
 
         <div class="card" style="margin-top:14px">
           <h4 style="margin:0"> Trayectoria del jugador </h4>
-          <p class="small muted" style="margin-top:8px">Club actual: Club Deportivo Equidad FC (2022 - presente)<br/>Club anterior: Academia de fútbol real Carvajal (2020 - 2022) <br/> independiente santa fe escuelas (2018-2019)</p>
+          <p class="small muted" style="margin-top:8px">Club actual: Club Deportivo Equidad FC (2022 - presente)<br/>Club anterior: Academia de fútbol real Carvajal (2020 - 2022) <br/> Independiente Santa Fe Escuelas (2018-2019)</p>
 
         </div>
         <div class="card" style="margin-top:14px">
@@ -225,7 +225,7 @@
     });
   });
 
-  // download CV (you can attach a real file)
+  // download CV 
   function downloadCV(){
     const sample = [
       '%PDF-1.4\n%âãÏÓ\n1 0 obj\n<< /Type /Catalog /Pages 2 0 R >>\nendobj\n'
